[package]
name = "cidr_util"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A utility for calculation between Ipv4Addr/u32 and CIDR"
readme = "README.md"
repository = "https://github.com/xmh0511/cidr_util"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
